always reset flags in test_dawg

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,3 +35,6 @@ warn_unused_configs = True
 ignore_missing_imports = True
 disallow_subclassing_any = False
 warn_unreachable = True
+
+[tool:pytest]
+addopts = --ignore=test/translate_algebra
