Fix run_test.py and tox

--- a/tox.ini
+++ b/tox.ini
@@ -17,9 +17,10 @@ deps =
 basepython =
     python3.7
 commands =
-    {envpython} run_tests.py --where=./ \
-                 --with-coverage --cover-html --cover-html-dir=./coverage \
-                 --cover-package=rdflib --cover-inclusive
+    {envpython} run_tests.py \
+		--cov-report term \
+		--cov-report html \
+		--cov
 
 deps =
 	-rrequirements.txt
