--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ setenv =
 commands =
     {envpython} setup.py clean --all
     {envpython} setup.py build
-    {envpython} run_tests.py
+    {envpython} pytest
 deps =
 	-rrequirements.txt
 	-rrequirements.dev.txt
@@ -17,7 +17,7 @@ deps =
 basepython =
     python3.7
 commands =
-    {envpython} run_tests.py \
+    {envpython} pytest \
 		--cov-report term \
 		--cov-report html \
 		--cov
