--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -17,14 +17,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.7"]
+        # , "3.8", "3.9", "3.10"
+        # , windows-latest
+        os: [ubuntu-latest, macos-latest]
         include:
-          - {
-              python-version: "3.7",
-              os: ubuntu-latest,
-              extensive-tests: true,
-            }
+          - python-version: "3.7"
+            os: ubuntu-latest
+            extensive-tests: true
+          - python-version: "3.8"
+            os: ubuntu-latest
+            TOXENV: "py38,docs"
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -62,9 +65,8 @@ jobs:
       - name: Install dependencies
         shell: bash
         run: |
-          pip install --default-timeout 60 -r requirements.txt
-          pip install --default-timeout 60 -r requirements.dev.txt
-          python setup.py install
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install --upgrade virtualenv tox tox-gh-actions
       - name: Install extra dev dependencies
         if: ${{ matrix.extensive-tests }}
         shell: bash
@@ -77,7 +79,6 @@ jobs:
               brew install berkeley-db@4
               export BERKELEYDB_DIR=$(brew --prefix berkeley-db@4)
           fi
-          pip install --default-timeout 60 -r requirements.dev-extra.txt
       - name: Validate
         shell: bash
         run: |
@@ -87,37 +88,6 @@ jobs:
             1>&2 echo "Running with fuseki"
             test_harness+="./with-fuseki.sh"
           fi
-          black --config black.toml --check ./rdflib || true
           flake8 --exit-zero rdflib
-          mypy --show-error-context --show-error-codes
-          "${test_harness[@]}" pytest -ra --cov
-  docs:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{env.DEFAULT_PYTHON}}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{env.DEFAULT_PYTHON}}
-      - name: Get pip cache dir
-        id: pip-cache
-        shell: bash
-        run: |
-          python -m ensurepip --upgrade
-          echo "::set-output name=dir::$(pip cache dir)"
-      - name: Cache pip
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.pip-cache.outputs.dir }}
-          key: docs-pip-v1-${{
-            hashFiles('**/setup.py', '**/requirements*.txt') }}
-          restore-keys: |
-            docs-pip-v1-
-      - name: Install dependencies
-        shell: bash
-        run: |
-          python -m pip install tox
-      - name: Build docs
-        shell: bash
-        run: |
-          python -m tox -e docs
+          export TOXENV="${{ matrix.TOXENV }}"
+          "${test_harness[@]}" python -m tox
