--- a/tox.ini
+++ b/tox.ini
@@ -1,50 +1,58 @@
 [tox]
 envlist =
-    py37,py38,py39,py310
+    py3{7,8,9,10},docs,covreport
+
+[gh-actions]
+python =
+    3.7: py37-extra
+    3.8: py38
+    3.9: py39
+    3.10: py310
 
 [testenv]
 setenv =
-    BERKELEYDB_DIR = /usr
+    extra: BERKELEYDB_DIR = /usr
+    COVERAGE_FILE={toxinidir}/.coverage.{envname}
+    MYPY_CACHE_DIR={envdir}/.mypy_cache
+extras =
+    tests
+    dev
+    extra: berkeleydb
+    extra: networkx
 commands =
-    {envpython} -m mypy rdflib --show-error-context --show-error-codes
-    {envpython} setup.py clean --all
-    {envpython} setup.py build
-    {envpython} -m pytest
-deps =
-	-rrequirements.txt
-	-rrequirements.dev.txt
+    {envpython} -m mypy
+    {posargs:{envpython} -m pytest --cov --cov-report=}
 
-[testenv:cover]
-basepython =
-    python3.7
+
+[testenv:covreport]
+basepython = python3.7
+deps = coverage
+skip_install = true
+parallel_show_output = true
+depends = py3{7,8,9,10}{-extra,}
+setenv =
+    COVERAGE_FILE=
 commands =
-    {envpython} -m pytest \
-		--cov-report term \
-		--cov-report html \
-		--cov
-
-deps =
-	-rrequirements.txt
-	-rrequirements.dev.txt
-
-[testenv:py3{7,8,9,10}-mypy]
-commands =
-    {envpython} -m mypy --show-error-context --show-error-codes
-deps =
-	-rrequirements.txt
-	-rrequirements.dev.txt
+    {envpython} -m coverage combine
+    {envpython} -m coverage report
 
 [testenv:docs]
-basepython =
-    python3.7
-deps =
-extras =
-    docs
+basepython = python3.7
+extras = docs
 passenv = TERM
 setenv =
     PYTHONHASHSEED = 0
 commands =
     sphinx-build -n -T -b html -d {envtmpdir}/doctrees docs docs/_build/html
+
+[testenv:precommit{,all}]
+basepython = python3.7
+skip_install = true
+deps = pre-commit
+passenv = HOMEPATH  # needed on Windows
+commands =
+    precommit: pre-commit run
+    precommitall: pre-commit run --all-files
 
 [pytest]
 # log_cli = true
