--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ extras =
     extra: berkeleydb
     extra: networkx
 commands =
-    {envpython} -m mypy
+    {env:MYPY_COMMAND:{envpython} -m mypy}
     {posargs:{envpython} -m pytest --cov --cov-report=}
 
 
