--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -17,10 +17,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7"]
+        python-version: ["3.7", "3.8", "3.9"]
+        # python-version: ["3.7", "3.8", "3.9", "3.10"]
         # , "3.8", "3.9", "3.10"
         # , windows-latest
-        os: [ubuntu-latest, macos-latest]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         include:
           - python-version: "3.7"
             os: ubuntu-latest
@@ -28,6 +30,9 @@ jobs:
           - python-version: "3.8"
             os: ubuntu-latest
             TOXENV: "py38,docs"
+          - python-version: "3.9"
+            os: ubuntu-latest
+            TOXENV: "flake8"
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
