--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ commands =
     {envpython} -m coverage report
 
 [testenv:docs]
-basepython = python3.7
+# basepython = python3.7
 extras = docs
 passenv = TERM
 setenv =
