--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,12 @@ python =
     3.9: py39
     3.10: py310
 
+
+[gh-actions:env]
+GH_TOX_KEY =
+    ubuntu-latest-3.9: docs
+
+
 [testenv]
 setenv =
     extra: BERKELEYDB_DIR = /usr
@@ -20,6 +26,7 @@ extras =
     extra: berkeleydb
     extra: networkx
 commands =
+    {env:EXTRA_COMMAND:}
     {env:MYPY_COMMAND:{envpython} -m mypy}
     {posargs:{envpython} -m pytest --cov --cov-report=}
 
