--- a/tox.ini
+++ b/tox.ini
@@ -10,9 +10,9 @@ python =
     3.10: py310
 
 
-[gh-actions:env]
-GH_TOX_KEY =
-    ubuntu-latest-3.9: docs
+; [gh-actions:env]
+; GH_TOX_KEY =
+;     ubuntu-latest-3.9: docs
 
 
 [testenv]
