--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -29,7 +29,7 @@ jobs:
             extensive-tests: true
           - python-version: "3.8"
             os: ubuntu-latest
-            TOXENV: "py38,docs"
+            # TOXENV: "py38,docs"
           - python-version: "3.9"
             os: ubuntu-latest
             run-flake8: true
@@ -91,6 +91,7 @@ jobs:
       - name: Validate
         shell: bash
         run: |
+          env
           test_harness=()
           if "${{ matrix.extensive-tests || false }}" && [ "${{ matrix.os }}" != "windows-latest" ]
           then
