--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -74,7 +74,7 @@ jobs:
         shell: bash
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install --upgrade virtualenv tox tox-gh-actions
+          python -m pip install --upgrade virtualenv "tox<4" tox-gh-actions
       - name: Install extra dev dependencies
         if: ${{ matrix.extensive-tests }}
         shell: bash
@@ -87,7 +87,6 @@ jobs:
               brew install berkeley-db@4
               export BERKELEYDB_DIR=$(brew --prefix berkeley-db@4)
           fi
-
       - name: Validate
         shell: bash
         run: |
