--- a/tox.ini
+++ b/tox.ini
@@ -4,15 +4,16 @@ envlist =
 
 [gh-actions]
 python =
-    3.7: py37-extra
+    3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
 
 
-; [gh-actions:env]
-; GH_TOX_KEY =
-;     ubuntu-latest-3.9: docs
+[gh-actions:env]
+GH_TOX_KEY =
+    ubuntu-latest-3.7: py37-extra
+    ubuntu-latest-3.9: py39, docs
 
 
 [testenv]
