--- a/tox.ini
+++ b/tox.ini
@@ -2,34 +2,37 @@
 envlist =
     py3{7,8,9,10},docs,covreport
 
-[gh-actions]
-python =
-    3.7: py37
-    3.8: py38
-    3.9: py39
-    3.10: py310
+; [gh-actions]
+; python =
+;     3.7: py37
+;     3.8: py38
+;     3.9: py39
+;     3.10: py310
 
-
-[gh-actions:env]
-GH_TOX_KEY =
-    ubuntu-latest-3.7: py37-extra
-    ubuntu-latest-3.9: py39, docs
+; [gh-actions:env]
+; GH_TOX_KEY =
+;     ubuntu-latest-3.7: extensive
+;     ubuntu-latest-3.8: py38, docs
+;     # ubuntu-latest-3.9: py39, docs
 
 
 [testenv]
 setenv =
-    extra: BERKELEYDB_DIR = /usr
+    extensive: BERKELEYDB_DIR = /usr
     COVERAGE_FILE={toxinidir}/.coverage.{envname}
     MYPY_CACHE_DIR={envdir}/.mypy_cache
 extras =
     tests
     dev
-    extra: berkeleydb
-    extra: networkx
+    extensive: berkeleydb
+    extensive: networkx
 commands =
+    python -c 'import os; print(os.environ)'
     {env:EXTRA_COMMAND:}
     {env:MYPY_COMMAND:{envpython} -m mypy}
     {posargs:{envpython} -m pytest --cov --cov-report=}
+
+; [testenv:py3{7,8,9,10}-extensive]
 
 
 [testenv:covreport]
@@ -54,7 +57,7 @@ commands =
     sphinx-build -n -T -b html -d {envtmpdir}/doctrees docs docs/_build/html
 
 [testenv:precommit{,all}]
-basepython = python3.7
+# basepython = python3.7
 skip_install = true
 deps = pre-commit
 passenv = HOMEPATH  # needed on Windows
