--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -17,27 +17,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9"]
-        # python-version: ["3.7"]
-        # python-version: ["3.8"]
-        # python-version: ["3.9"]
-        # python-version: ["3.7", "3.8", "3.9", "3.10"]
-        # , "3.8", "3.9", "3.10"
-        # , windows-latest
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
         # os: [ubuntu-latest, macos-latest, windows-latest]
-        os: [ubuntu-latest]
         include:
           - python-version: "3.7"
             os: ubuntu-latest
             extensive-tests: true
-            # TOXENV: "py37-extensive"
           - python-version: "3.8"
             os: ubuntu-latest
             TOXENV: "docs"
           - python-version: "3.9"
             os: ubuntu-latest
-            # run-flake8: true
-            EXTRA_COMMAND: "flake8 --exit-zero rdflib"
+            TOX_EXTRA_COMMAND: "flake8 --exit-zero rdflib"
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -78,8 +69,8 @@ jobs:
       - name: Install dependencies
         shell: bash
         run: |
-          python -m pip install "tox<4" tox-gh-actions
-      - name: Install extra dev dependencies
+          python -m pip install tox tox-gh-actions
+      - name: Install system packages
         if: ${{ matrix.extensive-tests }}
         shell: bash
         run: |
@@ -96,7 +87,7 @@ jobs:
         run: |
           set -x
           test_harness=()
-          if "${{ matrix.extensive-tests || false}}" && [ "${{ matrix.os }}" != "windows-latest" ]
+          if "${{ matrix.extensive-tests || false }}" && [ "${{ matrix.os }}" != "windows-latest" ]
           then
             1>&2 echo "Running with fuseki"
             test_harness+="./with-fuseki.sh"
@@ -104,18 +95,9 @@ jobs:
           fi
           TOXENV="${{ matrix.TOXENV }}"
           TOXENV="${TOX_PYENV}${TOX_PYENV_SUFFIX}${TOXENV:+,${TOXENV}}"
-          # if [ -n "${{ matrix.run-flake8 }}" ]
-          # then
-          #   MYPY_COMMAND= tox -e py"${MATRIX_PYTHON_VERSION//./}" -- flake8 --exit-zero rdflib
-          # fi
           export TOXENV
-          export EXTRA_COMMAND="${{ matrix.EXTRA_COMMAND }}"
+          export TOX_EXTRA_COMMAND="${{ matrix.TOX_EXTRA_COMMAND }}"
           env
           "${test_harness[@]}" python -m tox
         env:
-            GH_TOX_KEY: ${{ matrix.os }}-${{ matrix.python-version }}
-            # NOTE: This is not all environments that will run, it is merely
-            # all possible environments that tox-gh-actions can select from.
-            # The actual environments from this list that will run is
-            # determined by tox-gh-actions config in the tox.ini file.
-            # TOXENV: py3{7,8,9,10},py3{7,8,9,10}-extensive,py3{7,8,9,10}-docs
+          GH_ACTIONS_KEY: ${{matrix.os}}-${{matrix.python-version}}
