--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,10 @@
 [tox]
 envlist =
-    py3{7,8,9,10},docs,covreport
+    py3{7,8,9,10},docs,covreport,precommit
 
-; [gh-actions]
-; python =
-;     3.7: py37
-;     3.8: py38
-;     3.9: py39
-;     3.10: py310
-
-; [gh-actions:env]
-; GH_TOX_KEY =
-;     ubuntu-latest-3.7: extensive
-;     ubuntu-latest-3.8: py38, docs
-;     # ubuntu-latest-3.9: py39, docs
-
+[gh-actions:env]
+GH_ACTIONS_KEY=
+    ubuntu-latest-3.8: docs
 
 [testenv]
 setenv =
@@ -28,12 +18,9 @@ extras =
     extensive: networkx
 commands =
     python -c 'import os; print(os.environ)'
-    {env:EXTRA_COMMAND:}
-    {env:MYPY_COMMAND:{envpython} -m mypy}
+    {env:TOX_EXTRA_COMMAND:}
+    {env:TOX_MYPY_COMMAND:{envpython} -m mypy}
     {posargs:{envpython} -m pytest --cov --cov-report=}
-
-; [testenv:py3{7,8,9,10}-extensive]
-
 
 [testenv:covreport]
 basepython = python3.7
@@ -48,7 +35,6 @@ commands =
     {envpython} -m coverage report
 
 [testenv:docs]
-# basepython = python3.7
 extras = docs
 passenv = TERM
 setenv =
@@ -57,7 +43,6 @@ commands =
     sphinx-build -n -T -b html -d {envtmpdir}/doctrees docs docs/_build/html
 
 [testenv:precommit{,all}]
-# basepython = python3.7
 skip_install = true
 deps = pre-commit
 passenv = HOMEPATH  # needed on Windows
