--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -19,6 +19,7 @@ jobs:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
         # os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         include:
           - python-version: "3.7"
             os: ubuntu-latest
