--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -18,15 +18,13 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
-        # os: [ubuntu-latest, macos-latest, windows-latest]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - python-version: "3.7"
             os: ubuntu-latest
             extensive-tests: true
           - python-version: "3.8"
             os: ubuntu-latest
-            TOXENV: "docs"
           - python-version: "3.9"
             os: ubuntu-latest
             TOX_EXTRA_COMMAND: "flake8 --exit-zero rdflib"
@@ -86,7 +84,6 @@ jobs:
       - name: Validate
         shell: bash
         run: |
-          set -x
           test_harness=()
           if "${{ matrix.extensive-tests || false }}" && [ "${{ matrix.os }}" != "windows-latest" ]
           then
@@ -102,3 +99,37 @@ jobs:
           "${test_harness[@]}" python -m tox
         env:
           GH_ACTIONS_KEY: ${{matrix.os}}-${{matrix.python-version}}
+  tox-envs:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        tox-env: ["docs"]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{env.DEFAULT_PYTHON}}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{env.DEFAULT_PYTHON}}
+      - name: Get pip cache dir
+        id: pip-cache
+        shell: bash
+        run: |
+          python -m ensurepip --upgrade
+          echo "::set-output name=dir::$(pip cache dir)"
+      - name: Cache pip
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.pip-cache.outputs.dir }}
+          key: tox-${{ matrix.tox-env }}-pip-v1-${{
+            hashFiles('**/setup.py', '**/requirements*.txt') }}
+          restore-keys: |
+            tox-${{ matrix.tox-env }}-pip-v1-
+      - name: Install dependencies
+        shell: bash
+        run: |
+          python -m pip install tox
+      - name: Build docs
+        shell: bash
+        run: |
+          python -m tox -e ${{ matrix.tox-env }}
