--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -95,7 +95,6 @@ jobs:
           TOXENV="${TOX_PYENV}${TOX_PYENV_SUFFIX}${TOXENV:+,${TOXENV}}"
           export TOXENV
           export TOX_EXTRA_COMMAND="${{ matrix.TOX_EXTRA_COMMAND }}"
-          env
           "${test_harness[@]}" python -m tox
         env:
           GH_ACTIONS_KEY: ${{matrix.os}}-${{matrix.python-version}}
@@ -129,7 +128,7 @@ jobs:
         shell: bash
         run: |
           python -m pip install tox
-      - name: Build docs
+      - name: Run ${{ matrix.tox-env }}
         shell: bash
         run: |
           python -m tox -e ${{ matrix.tox-env }}
