--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,10 @@
 # https://www.gitpod.io/docs/references/gitpod-yml
-image:
-  file: Dockerfile.devcontainer
-  context: .
+# image:
+#   file: Dockerfile.devcontainer
+#   context: .
 tasks:
   - init: |
-      python -m pip install --upgrade -r requirements.dev.txt -r requirements.dev-extra.txt
+      task install:pip-deps
   - command: |
       task validate:static
       task --list
