--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,7 +6,7 @@ tasks:
   - init: |
       brew install go-task/tap/go-task
       task install:pip-deps
-    command: |
+  - command: |
       task validate:static
       task --list
 github:
