--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,10 +3,12 @@
 #   file: Dockerfile.devcontainer
 #   context: .
 tasks:
-  - init: |
+  # - init: |
+  #     brew install go-task/tap/go-task
+  #     task install:pip-deps
+  - command: |
       brew install go-task/tap/go-task
       task install:pip-deps
-  - command: |
       task validate:static
       task --list
 github:
